# AStar

./: .gitignore  CHANGELOG.md  cabal.project
AStar/: AStar.cabal
AStar/app/: Main.hs
Table/: CHANGELOG.md  Table.cabal
Table/src/: Table.hs
