cabal-version:      2.4
name:               Table
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             Clark Alesna
maintainer:         clark_alesna@hotmail.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md
build-type: Simple

library
    hs-source-dirs:     src
    exposed-modules:    Table
    build-depends:
        base >=4.14 && <4.15,
        hip ^>=1.5.6.0 && <1.6
